# MedScout

./: .gitignore  README.md  pyproject.toml
src/: duckduckgo_search.py  hospital_datafetch.py
tests/: test_duckduckgo_search.py
