[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "medscout"
version = "0.1.0"
description = "Find clinical elective rotations at hospitals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1,<1",
    "lxml>=5.3,<7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
